k3s-manifests/nginx-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: dev
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 80
