k3s-manifests/nginx-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - host: nginx-test.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test-svc
                port:
                  number: 80
